# RenderFramework

./: CMakeLists.txt  LICENSE  README.md  common.h  main.cpp
data/models/primitives/cube/: cube.blend
data/models/space/ships/drone_round_01/: drone_round_01.blend  drone_round_01.mtl
dataformats/: CMakeLists.txt
dataformats/raster/: CMakeLists.txt
dataformats/raster/png/: CMakeLists.txt
engine/: engine.cpp  engine.h  shaderprogram.h
shaders/fragment/: rgbafromtex0.frag
shaders/tesselation/: 3vertpatch.tesscont  3vertpatch.tesseval
src/: CMakeLists.txt  common.h
src/dataformats/: CMakeLists.txt
src/dataformats/raster/: CMakeLists.txt  raster.cpp  raster.h
src/dataformats/raster/png/: CMakeLists.txt  pngloader.cpp  pngloader.h  rfpng.cpp  rfpng.h
src/dataformats/vector/: CMakeLists.txt  vector.cpp  vector.h
src/dataformats/vector/primitives/: CMakeLists.txt  cube.cpp  cube.h
src/dataformats/vector/staticshapeloader/: CMakeLists.txt  staticshapeloader.cpp  staticshapeloader.h
src/engine/: CMakeLists.txt  defaultframebuffer.cpp  defaultframebuffer.h  engine.cpp  engine.h  framebuffer.h  framebufferrendertotexture.cpp  framebufferrendertotexture.h  light.cpp  light.h  scene.cpp  scene.h  shaderprogram.cpp  shaderprogram.h
src/engine/colliders/: collider.cpp  collider.h  cubecollider.cpp  cubecollider.h
src/engine/materials/: material.cpp  material.h  phongmaterialbare.cpp  phongmaterialbare.h
src/engine/nodes/: meshnodeda.cpp  meshnodeda.h  meshnodedi.cpp  meshnodedi.h  node.cpp  node.h  shadernode.cpp  shadernode.h
src/engine/vr/: CMakeLists.txt  controller.cpp  controller.h  device.cpp  device.h  env.cpp  env.h
src/shaders/: CMakeLists.txt
src/shaders/fragment/: ambient.frag  diffuse.frag  phong.frag
src/shaders/tesselation/: 3vertpatch.tesscont  3vertpatch.tesseval
src/shaders/vertex/: default.vert
test/: CMakeLists.txt
test/cube/: CMakeLists.txt
test/glfw-cube/: CMakeLists.txt  cubescene.h  main.cpp  objscene.cpp  objscene.h
test/glfw-multiscene/: CMakeLists.txt  cubescene.cpp  main.cpp
test/openvr/: CMakeLists.txt  cubescene.cpp  cubescene.h  main.cpp
